fix(TOC): tweak spacing and breakpoints

--- a/packages/documentation-framework/components/tableOfContents/tableOfContents.css
+++ b/packages/documentation-framework/components/tableOfContents/tableOfContents.css
@@ -8,8 +8,8 @@
   margin-block-end: var(--pf-t--global--spacer--md);
   margin-inline-start: calc(var(--pf-v6-c-page__main-section--PaddingInlineStart) * -1);
   margin-inline-end: calc(var(--pf-v6-c-page__main-section--PaddingInlineEnd) * -2);
-  padding-block-start: var(--pf-t--global--spacer--md);
-  padding-block-end: var(--pf-t--global--spacer--md);
+  padding-block-start: var(--pf-t--global--spacer--sm);
+  padding-block-end: var(--pf-t--global--spacer--sm);
   padding-inline-start: var(--pf-t--global--spacer--md);
   padding-inline-end: 0;
   box-shadow: var(--pf-t--global--box-shadow--lg--bottom);
@@ -24,7 +24,7 @@
 }
 
 /* Mobile jumplinks */
-@media (max-width: 1450px) {
+@media (max-width: 1449px) {
   .ws-toc.pf-m-expanded .pf-v6-c-jump-links__main {
     max-height: 65vh;
     overflow-y:auto;
@@ -72,7 +72,7 @@
   text-align: left;
 }
 
-@media (min-width: 1451px) {
+@media (min-width: 1450px) {
   .ws-toc .pf-v6-c-jump-links__main {
     margin-bottom: var(--jump-links-main-margin-bottom);
   }
